--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^5.18.0",
     "@vercel/postgres": "^0.9.0",
     "bcrypt": "^5.1.1",
+    "mailgun-js": "^0.22.0",
+    "mailgun.js": "^10.2.3",
     "next": "14.2.5",
+    "node-mailjet": "^6.0.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
@@ -26,6 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prisma": "^5.18.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
