--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mailgun-js": "^0.22.0",
     "mailgun.js": "^10.2.3",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "node-mailjet": "^6.0.5",
     "react": "^18",
     "react-dom": "^18",
