--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.18.0",
     "@vercel/postgres": "^0.9.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "mailgun-js": "^0.22.0",
     "mailgun.js": "^10.2.3",
     "next": "14.2.5",
