--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "mailgun.js": "^10.2.3",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "node-fetch": "^3.3.2",
     "node-mailjet": "^6.0.5",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
